--- a/package.json
+++ b/package.json
@@ -9,12 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monerium/sdk": "^2.7.3",
+    "@safe-global/account-abstraction-kit-poc": "^1.3.0",
+    "@safe-global/api-kit": "^1.3.1",
+    "@safe-global/auth-kit": "^1.2.1",
+    "@safe-global/onramp-kit": "^1.4.0",
+    "@safe-global/protocol-kit": "^1.3.0",
+    "@safe-global/relay-kit": "^1.3.0",
+    "@safe-global/safe-core-sdk-types": "^2.3.0",
+    "@safe-global/safe-react-components": "^2.0.6",
+    "@web3auth/base": "^4.6.0",
+    "@web3auth/modal": "^4.6.2",
+    "@web3auth/openlogin-adapter": "^4.6.0",
+    "ethers": "^5.7.2",
     "next": "14.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18",
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "eslint": "8.53.0",
-    "eslint-config-next": "14.0.3"
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
