--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@monerium/sdk": "^2.7.3",
     "@safe-global/account-abstraction-kit-poc": "^1.3.0",
     "@safe-global/api-kit": "^1.3.1",
@@ -23,18 +25,18 @@
     "@web3auth/openlogin-adapter": "^4.6.0",
     "ethers": "^5.7.2",
     "next": "14.0.3",
+    "postcss": "^8.4.31",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
 }
